# ccswitch

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: release.yml
Casks/: ccswitch.rb
Formula/: ccswitch.rb
completions/: ccswitch.fish
functions/: ccswitch.fish
legacy-fish/: LICENSE  README.md
legacy-fish/completions/: ccswitch.fish
legacy-fish/functions/: ccswitch.fish
src/: cli.rs  cli_shim.rs  config.rs  creds.rs  creds_shim.rs  error.rs  lib.rs  main.rs  model.rs  store.rs  switch.rs
tests/: smoke.rs
